# drydoc

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
drydoc/: Cargo.toml  README.md
drydoc/docs/: person.rs
drydoc/src/: lib.rs
drydoc_derive/: Cargo.toml
drydoc_derive/src/: lib.rs
drydoc_usage/: Cargo.toml
drydoc_usage/docs/: header.rs  import_example.rs  person.rs
drydoc_usage/src/: lib.rs
