[package]
name = "drydoc"
description = "Keep your doctests DRY with flexible/reusable templates"
include = ["src/**/*", "LICENSE.txt"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

[dependencies]
fs-err = "3.0.0"
minijinja = {version = "2.6.0", optional = true }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
toml = { version = "0.8.19", optional = true }
minijinja-contrib = { version = "2.6.0", optional = true }

[features]
jinja = ["minijinja", "toml"]
jinja_contrib = ["jinja", "minijinja-contrib"]

default = ["jinja_contrib"]
